# simviz

./: CMakeLists.txt  conanfile.txt
include/: Window.h
include/glad/: glad.h
src/: Window.cpp  glad.cpp  main.cpp
